# Total-Recall-MCP-Tool

./: AGENTS.md  README.md  pyproject.toml  requirements.txt
docs/: mcp-migration.md  runbook.md
openspec/changes/build-obsidian-rag-mcp-tool/: design.md  proposal.md  tasks.md
openspec/changes/harden-generated-note-output/: design.md  proposal.md  tasks.md
scripts/: register-startup-task.ps1
src/obsidian_rag_mcp/: __init__.py  cli.py  config.py
src/obsidian_rag_mcp/background_worker/: audio_pipeline.py  image_folder_pipeline.py  llm_runtime.py  page_document_pipeline.py  pdf_pipeline.py  queue.py  service.py  system_prompts.py  watchers.py  write_markdown.py
src/obsidian_rag_mcp/mcp_server/: server.py  tools.py
src/obsidian_rag_mcp/rag_core/: chunking.py  embeddings.py  indexing.py  llm_client.py  retrieval.py  tags.py
src/obsidian_rag_mcp/rag_core/vector_store/: base.py  sqlite_store.py
src/total_recall/background_worker/: audio_pipeline.py  image_folder_pipeline.py  output_policy.py  page_document_pipeline.py  pdf_pipeline.py  system_prompts.py  text_pipeline.py  write_markdown.py
tests/integration/: test_audio_flow.py  test_image_folder_flow.py  test_mcp_flows.py  test_mcp_note_update.py  test_mcp_protocol_server.py  test_path_safety.py  test_pdf_flow.py  test_pdf_temp_cleanup.py  test_text_flow.py
tests/unit/: test_chunking.py  test_config_defaults.py  test_idempotency.py  test_logging_behavior.py  test_manifest.py  test_output_policy.py  test_retrieval.py
(+3 files in other folders)
