[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "obsidian-rag-mcp"
version = "0.1.0"
description = "RAG-based MCP tooling for an Obsidian vault"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.8",
  "pydantic-settings>=2.3",
  "httpx>=0.27",
  "numpy>=1.26",
  "watchdog>=4.0",
  "pypdfium2>=4.30",
  "PyYAML>=6.0",
  "mcp>=1.0",
  "openai",
  "transformers",
  "torch",
  "huggingface-hub",
  "pillow>=12.2.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.2",
]

[project.scripts]
obsidian-rag-background = "obsidian_rag_mcp.cli:run_background"
obsidian-rag-mcp-server = "obsidian_rag_mcp.cli:run_mcp_server"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
